# tiamat

./: .gitignore  config.json  pyproject.toml  readme.md  tiamat.spec  web_main.py
tests/: test_app.py  test_auto_accept.py  test_config.py  test_dodge.py  test_features.py  test_instalock_autoban.py  test_launcher.py  test_packaging.py  test_ragequeue.py  test_rengar.py  test_reveal.py  test_web.py
tiamat/: AutoAccept.py  Backgrounds.py  Badges.py  Config.py  Dodge.py  Icons.py  Iconsclient.py  InstalockAutoban.py  RageQueue.py  RemoveFriends.py  Rengar.py  RestartUX.py  Reveal.py  Riotidchanger.py  StatusChanger.py  app.py  disconnect_reconnect_chat.py  main.py  requirements.txt  screens.py  tiamat.tcss  widgets.py
tiamat/web/: server.py
tiamat/web/static/: app.js  index.html  style.css
