[project]
name = "tiamat"
version = "0.1.0"
description = "CLI utilities for the League of Legends client"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "psutil==7.1.3",
    "requests==2.32.5",
    "rich==14.2.0",
    "termcolor==3.2.0",
    "urllib3==2.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tiamat"]
