[project]
name = "tiamat"
version = "0.1.0"
description = "A modern terminal interface for League of Legends client utilities"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "psutil==7.1.3",
    "requests==2.32.5",
    "rich==14.2.0",
    "textual>=8.2.8",
    "urllib3==2.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tiamat"]
